--- a/index.html
+++ b/index.html
@@ -20,30 +20,19 @@
         <div id="wins"></div>
         <h4>Demerits:</h4> 
         <div id="losses"></div>
-        <!-- <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <strong>Uh OH!</strong> you have received one demerit, you dont want three of those.
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div> -->
-        <!-- Alert you have received one demerit, you dont want three of those -->
-        <!-- Three demerits and you'll receive a citation -->
-        <!-- Five citations and youre looking at a violation -->
-        <!-- Four of those and youll receive a verbal warning -->
-        <!-- Keep it up and youre looking at a written warning-->
-        <!-- Two of those, that will land you in a world of hurt, in the form of a disciplinary review, -->
-        <!-- You have received a full DISADULATION -->
         <button type="button" id="start" class="btn btn-secondary btn-lg">Start</button>
-        <button type="button" id="pause" class="btn btn-secondary btn-lg">Pause</button>
-          <div id="question"></div>
-        <div>
+        
+          <div class="question-container" id="question">
+
+          </div>
+        <div class="answer-container">
             <button class="answers" id="button1" data-choice="0"></button>
             <button class="answers" id="button2" data-choice="1"></button>
             <button class="answers" id="button3" data-choice="2"></button>
             <button class="answers" id="button4" data-choice="3"></button>
 
         </div>
-
+        <div id="timeElm"><span id="count"></span> seconds</div>
         
 
     </div>
